# tomplot

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  TOMPLOT_REDESIGN.txt  good_plot_guide.md  pyproject.toml  setup.py  template.txt
examples/: Shallowwater_orthogrpahic_dantemp.py  convergence.py  gusto_quick.py  gusto_slice_side_by_side.py  gusto_sphere_3x2.py  gusto_sphere_3x3.py  gusto_sphere_orthographic.py  lfric_quick.py  lfric_sphere_3x2.py
figures/: figures_README.txt
plotting_scripts/: cartopy_demo.py  plot_cylinder.py  plot_demo_convergence_sphere.py  plot_demo_cylinder.py  plot_demo_orthographic.py  plot_demo_planar_1.py  plot_demo_planar_both.py  plot_demo_quiver_hooks.py  plot_demo_quiver_zonal.py  plot_dt_sphere.py  plot_galewsky_perturb.py  plot_gw_comparison.py  plot_path_hooks.py  plot_rewrite_four_part_sbr.py  plot_sphere.py  plot_williamson_2.py
tests/: conftest.py  test_1d_slice_plot.py  test_2d_slice_plot.py  test_add_convergence_comparison.py  test_area_restriction.py  test_cbar_labelpad.py  test_cmap_rescaling.py  test_constant_field.py  test_convergence_plot.py  test_extend_cmap.py  test_field_contour_plot.py  test_field_markersize.py  test_fig_cbar.py  test_lonlat_to_alphabeta.py  test_orthographic_scatter.py  test_quiver_plot.py  test_remove_contours.py  test_reshape_gusto_data.py  test_rounded_limits.py  test_time_series_plot.py  test_tomplot_contours.py  test_tomplot_legend.py
tomplot/: __init__.py  colorbar.py  compute_field_measures.py  convergence_plot.py  cubed_sphere.py  data_coords.py  data_extraction.py  data_manipulation.py  (+20 more)
(+73 files in other folders)
