[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomplot"
version = "2.0"
license = {file = "license.txt"}
authors = [
  {name="Thomas Bendall", email="thomas.bendall@metoffice.gov.uk"},
]
description = "tomplot is an interface to matplotlib for quickly making neat plots for numerical models of PDEs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "matplotlib",
  "numpy",
  "netCDF4",
  "pandas",
  "scipy",
  "cartopy"
]

[project.urls]
Homepage = "https://github.com/tommbendall/tomplot"
